--- a/App/MainWindow.xaml
+++ b/App/MainWindow.xaml
@@ -3,10 +3,43 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:App"
+        xmlns:viewModels="clr-namespace:App.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow" 
+        Height="300" Width="600" MinHeight="200" MinWidth="400"
+        WindowStartupLocation="CenterScreen"
+        d:DataContext="{d:DesignInstance viewModels:MainWindowViewModel}">
+    <Grid Margin="5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+
+        <ListView ItemsSource="{Binding KeyMappings}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock>
+                        <TextBlock.Text>
+                            <MultiBinding StringFormat="{}{0} -> {1}" Mode="OneWay">
+                                <Binding Path="SourceKey" Mode="OneWay"/>
+                                <Binding Path="MappedKey" Mode="OneWay"/>
+                            </MultiBinding>
+                        </TextBlock.Text>
+                    </TextBlock>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <StackPanel Grid.Column="1" Margin="5 0 0 0" MinWidth="100">
+            <StackPanel.Resources>
+                <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+                    <Setter Property="Margin" Value="0 0 0 5"/>
+                    <Setter Property="Padding" Value="7 3"/>
+                </Style>
+            </StackPanel.Resources>
+
+            <Button Content="Add" Command="{Binding AddMappingCommand}"/>
+            <Button Content="Clear" Command="{Binding ClearMappingsCommand}"/>
+        </StackPanel>
     </Grid>
 </Window>
