--- a/App/AppContainer.xaml
+++ b/App/AppContainer.xaml
@@ -7,7 +7,10 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary>
                     <converters:RecordingStateToStringConverter x:Key="RecordingStateToStringConverter"/>
+                    <converters:KeyToRepresentationConverter x:Key="KeyToRepresentationConverter"/>
                 </ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Light.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
