--- a/App/Windows/NewMappingWindow.xaml
+++ b/App/Windows/NewMappingWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:viewModels="clr-namespace:App.ViewModels"
         mc:Ignorable="d"
         Title="{Binding RecordingState, Mode=OneWay, Converter={StaticResource RecordingStateToStringConverter}}"
-        Height="200" Width="400" MinHeight="200" MinWidth="400"
+        Height="200" Width="590" MinHeight="200" MinWidth="400"
         WindowStartupLocation="CenterScreen"
         d:DataContext="{d:DesignInstance viewModels:NewMappingWindowViewModel, IsDesignTimeCreatable=True}"
         Closed="Window_OnClosed">
@@ -15,6 +15,12 @@
             <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
                 <Setter Property="Margin" Value="0 5 0 0"/>
                 <Setter Property="Padding" Value="7 3"/>
+            </Style>
+            <Style x:Key="MappingText" TargetType="TextBox">
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="FontWeight" Value="Bold"/>
             </Style>
         </Grid.Resources>
 
@@ -29,8 +35,8 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <TextBox Text="{Binding SourceKey}"/>
-        <TextBox Grid.Column="2" Text="{Binding MappedKey}"/>
+        <TextBox Text="{Binding SourceKey, Converter={StaticResource KeyToRepresentationConverter}}" Style="{StaticResource MappingText}"/>
+        <TextBox Grid.Column="2" Text="{Binding MappedKey, Converter={StaticResource KeyToRepresentationConverter}}" Style="{StaticResource MappingText}"/>
 
         <Button Grid.Row="1" Content="Source key" Command="{Binding RecordSourceKeyCommand}"/>
         <Button Grid.Row="1" Grid.Column="2" Content="Mapped key" Command="{Binding RecordMappedKeyCommand}"/>
